Use different threads for TTS and encoding
- Major change: TTS and encoding no longer run in the same threads.
  Corrolary: big PCM chunks are kept in memory and a new class helps
  track allocations of audio buffers;
- TTS processors no longer write in the Thread's big audio buffer with
  a moving offset. The processors return lists of buffers instead;
- The timeout class no longer creates a new thread every time they are
  enable;
- The AudioBuffer class has been moved to audio modules;
- It is now possible to run 3 simultaneous synthesis without blocking;
- ATTBin is no longer supported (will be deleted soon);
- Acapela adapter looks for libnscube64.so on 64bit platforms.

Non-backward compatibility for:
- ssml-to-audio
- tts-common
- tts-adapter-acapela
- tts-adapter-espeak
- tts-adapter-sapinative
- tts-adapter-osx
- tts-adpater-attnative